src/test/ui/issues/issue-6596-1.stderr
error: unknown macro variable `nonexistent`
  --> $DIR/issue-6596-1.rs:3:9
   |
LL |         $nonexistent
   |         ^^^^^^^^^^^^ unknown macro variable
...
LL |     e!(foo);
   |     -------- in this macro invocation

error: unknown macro variable `nonexistent`
  --> $DIR/issue-6596-1.rs:3:9
   |
LL |         $nonexistent
   |         ^^^^^^^^^^^^
   |
   = note: #[deny(meta_variable_misuse)] on by default

error: aborting due to 2 previous errors

